# fbx

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yml
examples/: tokenize.rs
src/: fbx.rs  lib.rs
src/parser/: ascii.rs  mod.rs
