[package]
name = "fbx"
version = "0.1.0"
authors = [
  "Hyeon Kim <simnalamburt@gmail.com>",
  "JongChan Choi <jong@chan.moe>"
]
description = "Autodesk FBX parser for Rust"
repository = "https://github.com/simnalamburt/fbx"
readme = "README.md"
keywords = ["fbx", "graphics", "3d", "model"]
license = "Zlib"
